--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3D1598394B2DB8747BC36DABB940E34D
+ProjectName=Toe Tac Tic
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "CDE1D7AC4863F76661924F9F0711AA26", "Toe Tac Tic")
 
 [StartupActions]
 bAddPacks=True
@@ -9,3 +11,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
